
#
#
#    Copyright (C) 2024 Universitat de València - UV
#    Copyright (C) 2024 Universitat Politècnica de València - UPV
#
#    This file is part of PenRed: Parallel Engine for Radiation Energy Deposition.
#
#    PenRed is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    PenRed is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with PenRed.  If not, see <https://www.gnu.org/licenses/>. 
#
#
#    contact emails:
#
#        vicent.gimenez.alventosa@gmail.com (Vicent Giménez Alventosa)
#    
#

#-----------------------------------------------------------------------------
#  Composition data base listing
#############################

    # Create read material executable
    add_executable(compositionsDB ${CMAKE_CURRENT_SOURCE_DIR}/compositionDB.cpp)

    #target libs
    target_link_libraries(compositionsDB pen_compositionsDB)

    # Install readMat executable
    install(
    TARGETS compositionsDB
    DESTINATION ${PROJECT_SOURCE_DIR}/compiled/compositionsDB/
    )

